--- a/airbox/index.html
+++ b/airbox/index.html
@@ -5,14 +5,14 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>Airbox Надувные подушки и дорожки с доставкой по всей России</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/logo-ico.png" type="image/x-icon">
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
@@ -386,7 +386,7 @@
 									<span class="vert_line_inbox"></span>
 									<span class="desc">6 х 6</span>
 								</div>
-								<div class="scale_elem road_elem pre_last">
+								<div class="scale_elem road_elem pre_last_road">
 									<span class="vert_line_inbox"></span>
 									<span class="desc">10 х 10</span>
 								</div>
