--- a/escape1/index.html
+++ b/escape1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 
@@ -272,7 +272,7 @@
 							</div>
 							<div class="col-md-3 col-sm-6 text-center">
 								
-								<img src="img/Microlancer copy.png" alt="">
+								<img src="img/Microlancer.png" alt="">
 
 							</div>
 						</div>
